--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
+@font-face {
+    font-family: 'Pixel';
+    src: url(../fonts/novem___.ttf);
+}
 * {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
     box-sizing: border-box;
+    font-family: 'Pixel', sans-serif;
 }
 body{
     background-color: #24272E;
@@ -11,35 +16,39 @@ p{
     font-size: .8em;
     padding-bottom: 20px;
 }
+h1{
+    font-size: 3em;
+}
 header{
     background-color: #fff;
-    padding: 20px;
+    padding: 40px;
 }
 header h1{
-    font-family: 'Games', sans-serif;
     color: green;
     text-align: center;
-    
 }
 .round-choise{
     border: 3px solid #fff;
     border-radius: 5px;
     width: 400px;
     text-align: center;
-    margin: 20px auto;
+    margin: 40px auto;
     color: #fff;
-    font-size: 40px;
-    padding: 15px 20px;
-    font-family: sans-serif;
+    font-size: 2.9em;
+    padding: 30px 20px;
+}
+#winOrLose{
+    padding: 30px 0;
 }
 .button{
-    font-size: 20px;
-    width: 50px;
-    height: 50px;
+    font-size: .8em;
+    width: 60px;
+    height: 60px;
     background-color: transparent;
     color: #fff;
     border-radius: 25%;
     border: 3px solid #fff;
+    cursor: pointer;
 }
 .button:hover{
     border: 1px solid;
@@ -55,9 +64,8 @@ header h1{
     text-align: center;
     margin: 20px auto;
     color: #fff;
-    font-size: 40px;
-    padding: 15px 20px;
-    font-family: sans-serif;
+    font-size: 4em;
+    padding: 30px 20px;
     position: relative;
 }
 .badge{
@@ -65,32 +73,35 @@ header h1{
     color: white;
     font-size: 15px;
     padding: 2px 10px;
-    font-family: sans-serif;
 }
 .badge2{
     background: blue;
     color: white;
     font-size: 15px;
     padding: 2px 10px;
-    font-family: sans-serif;
 }
 #user-label{
     position: absolute;
-    top: 30px;
-    left: -25px;
+    padding: 5px;
+    font-size: .6em;
+    top: 35px;
+    left: -45px;
 }
 #computer-label{
     position: absolute;
-    top: 30px;
-    right: -30px;
+    padding: 5px;
+    font-size: .6em;
+    top: 35px;
+    right: -45px;
 }
 .result{
-    font-size: 35px;
+    margin-top: 50px;
+    
     color: #fff;
 }
 .result p {
     text-align: center;
-    font-family: sans-serif;
+    font-size: 2.5em;
     font-weight: bold;
 }
 .choices{
@@ -114,19 +125,31 @@ header h1{
     margin-top: 30px;
     text-align: center;
     color: #fff;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-size: 2em;
     font-weight: bold;
 }
 .reset{
-    margin: 5vh 45%;
+    margin: 3vh 45vh;
     padding: 10px 20px;
     border: 2px dashed;
     font-size: 1.3em;
     background-color: darkolivegreen;
     color: lightgreen;
+    cursor: pointer;
 }
 img{
     width: 100px;
     padding: 5px;
 } 
+.green-glow{
+    border: 4px solid lime;
+    box-shadow: 0 0 10px #31b43a;
+}
+.red-glow{
+    border: 4px solid #fc121b;
+    box-shadow: 0 0 10px #d01115;
+}
+.gray-glow{
+    border: 4px solid #464647;
+    box-shadow: 0 0 10px #25292b;
+}
